@@ -1,3 +1,9 @@
+2001-03-28  Akim Demaille  <akim@epita.fr>
+
+	* program.am: Fix a stupid typo: now *all* (not none) the programs
+	use `$(EXEEXT)'.
+	Reported by Robert Boehne.
+
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&read_am_file, &file_contents): Avoid name clashes
